<resources>
    <string name="app_name">codersChallenge</string>
    <string name="login_background">bg</string>
    <string name="version">1.0.0 beta</string>
    <string name="Username"></string>
    <string name="UsernameHint">請輸入使用者名稱</string>
    <string name="password"></string>
    <string name="passwordHint">請輸入密碼</string>
    <string name="UsernameShow">"帳號: "</string>
    <string name="PasswordShow">"密碼: "</string>
    <string name="AppName">Coders Challenge</string>
    <string name="loginText">登入</string>
    <string name="registerText">註冊</string>
    <string name="RegisterActivity_Registertext">註冊</string>
    <string name="registerActivity_email">"請輸入帳號: "</string>
    <string name="registerActivity_passwordText">請輸入密碼:</string>
    <string name="registerEmailInput"></string>
    <string name="registerActivityPasswordInput">點此輸入密碼</string>
    <string name="registerComplete">完成註冊</string>
    <string name="backButton">返回</string>
    <string name="registerBackground" />
    <string name="SingleModeText">單人模式</string>
    <string name="PlayerWatchBackground" />
    <string name="BattleModeText">對戰模式</string>
    <string name="playerInfoText">玩家資訊</string>
    <string name="currentUserText">當前玩家:</string>
    <string name="currentUserEmailShow">Unknown</string>
    <string name="ChooseDiffAndQuesBK" />
    <string name="DifficultyEasyText">簡單</string>
    <string name="DifficultyMediumText">中等</string>
    <string name="DifficultyHardText">困難</string>
    <string name="CurrentModeText">當前模式:</string>
    <string name="CurrentMode">Unknown()</string>
    <string name="CurrentDifficultyText">當前難度:</string>
    <string name="CurrentDifficulty">簡單模式</string>
    <string name="startTestText">開始測驗</string>
    <string name="chooseCppText">C / C++</string>
    <string name="ChooseJavaText">Java</string>
    <string name="choosePythonText">Python</string>
    <string name="chooseOSText">作業系統</string>
    <string name="chooseLogicText">數位邏輯</string>
    <string name="chooseHintText">請勾選題目</string>
    <string name="firstQuesText">第一題</string>
    <string name="QuestionShows">Getting...</string>
    <string name="SingleModeBackground" />
    <string name="ChoiceOneText">選項一</string>
    <string name="ChoiceTwoText">選項二</string>
    <string name="ChoiceThreeText">選項三</string>
    <string name="ChoiceFourText">選項四</string>
    <string name="registerEmailInputHint">點此輸入帳號</string>
    <string name="finalOfSingleModeBackground" />
    <string name="PlayerInfoBackground" />
    <string name="DifficultyText">難度:</string>
    <string name="DiffiShowText">Unknown</string>
    <string name="QuestionTypeText">題目類型:</string>
    <string name="QuestionTypeShow">Unknown</string>
    <string name="TotalCorrect">"總答對題數: "</string>
    <string name="TotalFault">"總答錯題數: "</string>
    <string name="CheckOutText">【結算】</string>
    <string name="ChooseDiffText">"難度: "</string>
    <string name="ChooseType">"題目種類: "</string>
    <string name="CorrectRate">"答對率: "</string>
    <string name="Comments">"評語: "</string>
    <string name="CheckoutButton">確認結果</string>
</resources>